[package]
name = "Stockpile"
version = "0.1.0"
description = "Funding Without Barriers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stockpile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
