[package]
name = "Stockpile"
version = "0.1.0"
description = "Funding Without Barriers."
authors = ["Stockpile Team <stockpileprotocol@gmail.com>"]
repository = "https://github.com/StockpileProtocol/stockpile"
categories = ["crowdfunding"]
keywords = ["solana", "anchor", "crowdfunding"]
license = "GPL-3.0"
homepage = "https://stockpile.pro/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stockpile"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
